# gst-rknn-filter

./: .gitignore  README.md  build.sh  meson.build  run_batch_test.sh
src/: dmabuffer.c  gstrknn.c  meson.build  postprocess.cc  postprocess.h  rknnprocess.cc  rknnprocess.h
src/postprocess/: postprocess.h  postprocess_classification.cc  postprocess_dispatcher.cc  postprocess_impl.h  postprocess_retinaface.cc  postprocess_yolov6.cc
